[package]
name        = "exfer-indexer"
version     = "0.1.0"
edition     = "2021"
description = "Read-only chain indexer for Exfer — HTLC observability + attestation graph over the full UTXO chain"
license     = "MIT"
repository  = "https://github.com/exfer-stack/exfer-indexer"
homepage    = "https://github.com/exfer-stack/exfer-indexer"

[[bin]]
name = "exfer-indexer"
path = "src/main.rs"

[dependencies]
# Share wire types (HtlcRecord / HtlcState / try_parse_htlc /
# structural_merkle_hash / …) with exfer-walletd via the upstream
# crate. Pinned to a release tag at release time; the fork-branch pin
# below is TEMPORARY until the structural-merkle-hash PR lands upstream
# and a v1.12.x tag is cut.
exfer = { git = "https://github.com/exfer-stack/exfer.git", branch = "downstream/observer-types-plus-structural" }

# HTTP + JSON-RPC stack — same axum/tokio/tower set walletd uses so
# the two services share an ops/operator profile.
axum             = { version = "0.7", features = ["macros"] }
tokio            = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "fs"] }
tokio-util       = { version = "0.7", features = ["rt"] }
tower            = "0.5"
tower-http       = { version = "0.6", features = ["trace", "cors"] }
reqwest          = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
hex              = "0.4"
bincode          = "1.3"
base64           = "0.22"

# Storage — same engine as the node + walletd index (redb).
redb             = "2"

# CLI / config / logging
clap             = { version = "4", features = ["derive", "env"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
anyhow           = "1"
thiserror        = "1"

# TLS termination (optional; for public-internet binds).
axum-server      = { version = "0.7", features = ["tls-rustls"] }
rcgen            = "0.13"
rustls           = "0.23"
rustls-pemfile   = "2"
sha2             = "0.10"
subtle           = "2"

[dev-dependencies]
tempfile         = "3"
wiremock         = "0.6"

[profile.release]
opt-level        = "z"
lto              = true
codegen-units    = 1
strip            = true
